# doublecmd-plugins

./: .gitignore  README.md  buttons.md  dubuild.md  extassoc.xml  extassoc.xml.md  highlighters.xml  multiarc.ini  multiarc.ini.md  plugins.md
dark-theme/: readme.md
dark-theme/highlighters/: Assembler(x86).hgl
highlighters/: AHK.hgl  AutoIt3.hgl  AutoconfM4.hgl  AviSynth.hgl  C#.hgl  CMake.hgl  Control.hgl  CueSheet.hgl  DCErrorFile.hgl  HashSum.hgl  INI.hgl  JavaScript.hgl  List.hgl  LogFile.hgl  Lua.hgl  M3U.hgl  M4.hgl  MakeFile.hgl  Markdown.hgl  Meson.hgl  QMake.hgl  README.md  Rust.hgl  Scheme.hgl  UDev.hgl  VBScript.hgl  Vapi.hgl  WindowsRegistryFiles.hgl  iCalendar.hgl
multiarc/: 7z_stuff.ini  7zz_hash.ini  README.md  balz.ini  bare-git.ini  brotli.ini  cabextract.ini  duke3d.ini  freearc.ini  grp.ini  idtech2.ini  innoextract.ini  lizard.ini  lrzip.ini  lz4.ini  lzop.ini  mcm.ini  msi.ini  pak.ini  patchfs.ini  pixz.ini  quad.ini  rar.ini  tzst.ini  unace.ini  unarchiver.ini  unshield.ini  xxd.ini  zpaq.ini  zstandard.ini
plugins/: make_all.sh  make_all_clean.sh  pack_to_tarballs.sh  run_ldd.sh
plugins/lua_crap/: tst.lua  wcxtst.lua  wdxtst.lua
plugins/po/: makepot.sh  plugins.pot
plugins/sdk/: common.h  dialog_api.md  dialogs_common.md  dialogs_lfm.md  dsxplugin.h  extension.md  readme.md  translation.md  wcxplugin.h  wdxplugin.h  wfxplugin.h  wlxplugin.h
plugins/wdx/: crapxmlwdx.lua  dfwdx.lua  duplicatewdx.lua  duwdx.lua  exiftoolwdx.lua  fileinfowdx.lua  gitinfowdx.lua  hexheaderwdx.lua  quasiexpanderwdx.lua  randomcharswdx.lua
plugins/wlx/: 301.md  dcpoppler
plugins/wlx/kpart_host/: CMakeLists.txt  README.md
plugins/wlx/kpart_host/src/: kpartwidget.cpp  kpartwidget.h  main.cpp
plugins/wlx/logview/: .gitignore  CMakeLists.txt  README.md  double commander wlx log viewer.md
plugins/wlx/logview/src/: LogModel.cpp  LogModel.h  LogViewerWidget.cpp  LogViewerWidget.h  wlx_plugin.cpp
plugins/wlx/mpv_wayland/: .gitignore  CMakeLists.txt  README.md
plugins/wlx/mpv_wayland/sdk/: wlxplugin.h
plugins/wlx/mpv_wayland/src/: main.cpp  mpvwidget.cpp  mpvwidget.h
plugins/wlx/rich_editor_qt/: CMakeLists.txt  README.md
plugins/wlx/rich_editor_qt/src/: editor_widget.cpp  editor_widget.h  wlx_plugin.cpp  wlx_plugin.h
scripts/: CopyTree.py  MarkUnmark.lua  cmdtotal  copytoallsubdirs.lua  copytosubdirs.lua  cutext  editsymlink.lua  fileinfo.sh  freearc  gotolinkpath.lua  innounp  trash_empty.sh  unpack_all  unpack_one  unshield  wcxtest
scripts/lua/: AddSymlink.lua  ChangePermissionsOwner.lua  ChangeSequentialNumbers.lua  CheckSum.lua  ChooseColumnsSet.lua  ChooseTab.lua  CopyToTargetSelectedFolders.lua  DateByEXIF.lua  FindReplaceInSymlinks.lua  LoadSelectionFromClipEx.lua  M3U8Check.lua  MakeDir.lua  QuickFilter.lua  SaveClipboardToFile.lua  SaveClipboardToFileCtrlV.lua  chdirr.lua  chdrive.lua  copydelete.lua  copytoallsubdirs.lua  copytosubdirs.lua  editsymlink.lua  ffmegclip.lua  filelist.lua  filelistfromcmds.lua  gitlsothers.lua  gotolinkpath.lua  gotolinktarget.lua  jumpasadmin.lua  markunmark.lua  quasimovetab.lua
scripts/multiarc/: extract_mht
scripts/sushi_kostyl/: Makefile  sushi_kostyl  sushi_kostyl.c
scripts/vcard-view/: readme.md  vcard.py  vcard_print.py
stash/atril-gtk2/: atril-1.16.1.tar.xz
stash/freearc/: arc.sh
stash/gtksourceview2/: gtksourceview-2.10.5.tar.bz2
stash/qtermwidget-qt5/: qtermwidget-1.4.0.tar.xz
third-party_and_other/qtermwidget-qt5/: PKGBUILD
utils/: ChangePermissionsOwnwer.lua  ChangeSequentialNumbers.lua  CheckSum.lua  CopyTree.py  CreateNewFile.lua  LoadSaveFavFiles.lua  MakeDir.lua  RemoveCharacters.lua  SaveClipboardToFile.lua  SetFAttrCustom.lua  base64uue
utils/atril-gtk2/: PKGBUILD
utils/freearc/: PKGBUILD
utils/marker/: marker.lua  markerwdx.lua  readme.md
utils/newfiles/: HTML 4.01 Frameset.html  HTML 5.html  OpenDocument Formula.odf  OpenDocument Graphics.odg  OpenDocument Text.odt  XHTML 1.0 Frameset.xhtml  XHTML 1.0 Strict.xhtml
utils/sushi_kostyl/: sushi_kostyl.c
utils/tags/: readme.md  tags.lua  (+1 more)
(+1037 files in other folders)
